k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fake-news
  labels:
    app.kubernetes.io/name: fake-news-detection
